# private-cloud

./: .gitignore  README.en.md  README.md  _gen_admin.py  _gen_adminpage.py  _gen_ap.sh  main.py  merge_filelist.py  pyproject.toml  roo_task_jun-18-2026_9-37-40-am.md  write_admin.py
backend/: .env.example  cert.pem  gen_conftest.py  gen_conftest2.py  gen_full_conftest.py  key.pem  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250419_143000_initial_migration.py  20250427_140000_add_folders_and_files.py  20250427_150000_drop_share_links.py  20250427_160000_add_is_system_to_folders.py  20260610_2021_30d0b9a02f68_init.py  20260616_120000_add_collaborations.py  20260616_1337_add_limited_date_and_available_user.py  20260616_2057_f718b36266ed_init.py  20260617_1450_5b3a1859431f_init.py  20260617_1900_aa83782e14bd_init.py  20260617_1910_21dea37b2f28_init.py  20260617_1912_15ee0df1b9d2_init.py  20260617_1919_700aca61c389_init.py  20260617_1942_5d2c7e5c3ce3_init.py  20260617_1957_842fd934de87_init.py  20260617_2006_7b09f6ec2ab4_init.py  20260617_2010_232370a050b6_init.py  20260617_2010_4332f12aa430_init.py  20260617_2038_23b63687676c_init.py  20260617_2040_90ecc993eb63_init.py  20260618_0205_5e5498d38740_init.py  (+10 more)
backend/app/: config.py  constants.py  database.py  main.py
backend/app/models/: base.py  (+6 more)
backend/tests/: TEST_PLAN.md  conftest.py  test_account_service.py  test_admin_api.py  test_admin_api_clean.py  test_collaboration_api.py  test_file_service.py  test_folder_service.py  test_repositories.py  test_share_service.py  test_utils.py
(+87 files in other folders)
